[Add] custom login page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,3 +48,5 @@ activateOrDeactivate=Activate Or Deactivate
 addNewUser=Add new user
 userEvents=User Events
 userType=User Type
+password=Password
+logIn=Log In
