--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -48,3 +48,5 @@ activateOrDeactivate=Aktywuj albo deaktywuj
 addNewUser=Dodaj nowego użytkownika
 userEvents=Wydarzenia użytkownika
 userType=Typ użytkownika
+password=Hasło
+logIn=Zaloguj
