[Add] custom email validation, user registration, new user email attribute

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,7 @@ Pattern.developer.developerName=Invalid name
 NotBlank.developer.developerSurname=Surname is mandatory
 Size.developer.developerSurname=Size must be between 3 and 12
 Pattern.developer.developerSurname=Invalid surname
+Pattern.developer.password=Password is mandatory
 startDate=Start Date
 endDate=End Date
 user=User
@@ -53,3 +54,5 @@ logIn=Log In
 home=Home page
 logout=Logout
 rememberMe=Remember me?
+register=Register
+userEmail=Email
