--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -31,6 +31,7 @@ Pattern.developer.developerName=Niepoprawne imie
 NotBlank.developer.developerSurname=Nazwisko wymagane
 Size.developer.developerSurname=Od 3 do 12 liter
 Pattern.developer.developerSurname=Niepoprawne nazwisko
+Pattern.developer.password=Hasło wymagane
 startDate=Data rozpoczęcia
 endDate=Data zakończenia
 user=Użytkownik
@@ -53,3 +54,5 @@ logIn=Zaloguj
 home=Strona startowa
 logout=Wyloguj
 rememberMe=Nie wylogowuj
+register=Utwórz konto
+userEmail=Email
