[Fix] user should be inactive after creation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,4 +56,4 @@ logout=Logout
 rememberMe=Remember me?
 register=Register
 userEmail=Email
-wrongUP=Wrong user or password
+wrongUP=Wrong email or password
